*****
* @package fluxx-compensator an ownCloud app
* @category base
* @author Christian Reiner
* @copyright 2012-2013 Christian Reiner <foss@christian-reiner.info>
* @license GNU Affero General Public license (AGPL)
* @link information http://apps.owncloud.com/content/show.php?content=157091
*
* This library is free software; you can redistribute it and/or
* modify it under the terms of the GNU AFFERO GENERAL PUBLIC LICENSE
* License as published by the Free Software Foundation; either
* version 3 of the license, or any later version.
*
* This library is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
* GNU AFFERO GENERAL PUBLIC LICENSE for more details.
*
* You should have received a copy of the GNU Affero General Public
* License along with this library.
* If not, see <http://www.gnu.org/licenses/>.
*****

Changelog: 

* Sun Apr 28 2013 Christian Reiner: version 0.1.4
Include navigation handle in moving of content when header panel is hidden.
Apply intelligent positioning to navigation handle when header is hidden too.
Fixed a few glitches in handle movements under certain conditions.
* Wed Apr 17 2013 Christian Reiner: version 0.1.3
Some optical fixes to the handles position and shadow. 
Slide navigations content up too when the header panel is hidden. 
* Mon Apr 09 2013 Christian Reiner: version 0.1.2
Fixed handle positioning for non-priviledged user accounts.
* Sat Mar 23 2013 Christian Reiner: version 0.1.1
Corrected handles anchor definition to work correct on exotic page layouts. 
This is required by the 'external' app which embeds a frame as main widgets. 
* Tue Feb 19 2013 Christian Reiner: version 0.1.0
Initial release.